force-app/main/default/objects/Product2/fields/Life_Expectancy__c.field-meta.xml
<CustomField>
    <fullName>Life_Expectancy__c</fullName>
    <label>Life Expectancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>