force-app/main/default/objects/Product2/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <description>Used by the Vehicle View LWC to display the Product image in the asset details panel when selecting an asset (a vehicle part).</description>
    <inlineHelpText>If image is an Asset File, use pattern such as: https://[your_domain].file.force.com/file-asset/[file_name]?oid=[your_org_id]</inlineHelpText>
    <label>Product Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>