force-app/main/default/objects/Product2/fields/Top_View_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Top_View_Image_URL__c</fullName>
    <label>Top View Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>