force-app/main/default/objects/Product2/recordTypes/Auto_IDO_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Auto_IDO_Vehicle</fullName>
    <active>true</active>
    <label>AutoIDO - Vehicle</label>
</RecordType>