force-app/main/default/objects/Product2/recordTypes/Auto_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Auto_Vehicle</fullName>
    <active>true</active>
    <label>Vehicle</label>
</RecordType>