force-app/main/default/objects/Product2/recordTypes/AutoIDO_Competitor_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>AutoIDO_Competitor_Vehicle</fullName>
    <active>true</active>
    <label>AutoIDO - Competitor Vehicle</label>
</RecordType>