force-app/main/default/objects/Product2/listViews/All_Competitor_Vehicles.listView-meta.xml
<ListView>
    <fullName>All_Competitor_Vehicles</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.MAKE_NAME</columns>
    <columns>PRODUCT2.MODEL_NAME</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ProductImageRelatedList__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.AutoIDO_Competitor_Vehicle</value>
    </filters>
    <label>All Competitor Vehicles</label>
</ListView>