force-app/main/default/objects/Product2/listViews/All_Vehicles.listView-meta.xml
<ListView>
    <fullName>All_Vehicles</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ProductImageRelatedList__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Auto_IDO_Vehicle</value>
    </filters>
    <label>All Vehicles</label>
</ListView>