force-app/main/default/objects/Product2/listViews/Auto_Electra_Vehicle_Parts.listView-meta.xml
<ListView>
    <fullName>Auto_Electra_Vehicle_Parts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Auto_Vehicle_Part</value>
    </filters>
    <label>Electra Vehicle Parts</label>
</ListView>