force-app/main/default/objects/Product2/listViews/Auto_Electra_Vehicles.listView-meta.xml
<ListView>
    <fullName>Auto_Electra_Vehicles</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_Id__c</field>
        <operation>contains</operation>
        <value>Auto</value>
    </filters>
    <label>Electra Vehicles</label>
</ListView>