force-app/main/default/objects/Product2/listViews/Revenue_Cloud_Products.listView-meta.xml
<ListView>
    <fullName>Revenue_Cloud_Products</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>BillingPolicy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_ID__c</field>
        <operation>contains</operation>
        <value>Rev,RLM</value>
    </filters>
    <label>Revenue Cloud Products</label>
</ListView>